# STM32ProjectTemplate

./: .gitignore  CMakeLists.txt  Drivers  Project.ioc  README.md  STM32F103C8TX_FLASH.ld
Core/Inc/: stm32f10x_conf.h  stm32f10x_it.h
Core/Src/: main.c  stm32f10x_it.c  system_stm32f1xx.c
Core/Startup/: startup_stm32f103xb.s
Project/: .gitignore
cmake/stm32cubemx/: CMakeLists.txt  Makefile  cmake_install.cmake
doc/: README_en.md
